<?xml version="1.0" encoding="utf-8"?>

    
    <TabHost   xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/tabHost"
    >
    <TabWidget
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@android:id/tabs"
    />
    


    
     <FrameLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@android:id/tabcontent"
     >
    

             
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:id="@+id/tab1"
	    >	    
	    
      	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="70dp"
	    android:id="@+id/spacingLayout"
	    >
	    </LinearLayout>
	    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    >	
		</LinearLayout>  
		    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    >		
		</LinearLayout>    

	    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:orientation="horizontal"
			        android:background="@color/white" >
			        
			        <TextView
			            android:id="@+id/txtConnection"
			            android:layout_width="0dp"
			            android:layout_height="25dp"
			            android:layout_weight="0.41"
			            android:gravity="center_vertical|center_horizontal"
			            android:text="@string/robotDisconnected"
			            android:textColor="@color/red"
			            android:textSize="18sp"
			            android:textStyle="bold" />
			        
		</LinearLayout>
	    
	    <!-- Sensors status -->	    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background='@color/title_bar'
	    >
			<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/sensors_header"
		    android:id="@+id/text_view"
		    />
	    </LinearLayout>	    
		
	    <!-- Creation of battery -->
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/battery_level"
			    android:paddingRight="8sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/init_value"
			    android:id="@+id/batteryLevel"
			    />
			</LinearLayout>
	    </LinearLayout>     
	    <!-- Creation of current desired speed -->    
	    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	   				    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="50dp"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/left_speed_txt"
			    android:paddingRight="8sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="50dp"
		    android:layout_height="wrap_content"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/init_value"
			    android:id="@+id/leftSpeedTxt"
			    />
			</LinearLayout>
	        
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="50dp"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/right_speed_txt"
			    android:paddingRight="8sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="50dp"
		    android:layout_height="wrap_content"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/init_value"
			    android:id="@+id/rightSpeedTxt"
			    />
			</LinearLayout>

	    </LinearLayout>      
	    
	   	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
			        <Button
			            android:id="@+id/btnCalibrate"
			            android:layout_width="0dp"
			            android:layout_height="35dp"
			            android:layout_weight="0.41"
			            android:onClick="calibrateSensors"
			            android:text="@string/calibration" />
			        
		</LinearLayout>   	    
	    
	    
	    <!-- Targets status -->
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background='@color/title_bar'
	    >
			<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/targets_header"
		    android:id="@+id/text_view"
		    />
	    </LinearLayout>
	 
	 	<!-- Creation of target0 info -->
	    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/X0"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="55dp"
		    android:layout_height="wrap_content"
		    >

			    <TextView
			        android:id="@+id/X0"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/init_value" />

			</LinearLayout>
			
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/Y0"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="55dp"
		    android:layout_height="wrap_content"
		    >

			    <TextView
			        android:id="@+id/Y0"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/init_value" />

			</LinearLayout>   
			
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/d0"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    >

			    <TextView
			        android:id="@+id/d0"
			        android:layout_width="55dp"
			        android:layout_height="wrap_content"
			        android:text="@string/init_value" />

			</LinearLayout>   		
	   				
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/orient0"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    >

			    <TextView
			        android:id="@+id/orient0"
			        android:layout_width="55dp"
			        android:layout_height="wrap_content"
			        android:text="@string/init_value" />

			</LinearLayout>      		
	   		
	    </LinearLayout>
	    
	    
	    <!-- Creation of target1 info -->
	    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/X1"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    >
			    <TextView  
			    android:layout_width="55dp" 
			    android:layout_height="wrap_content" 
			    android:text="@string/init_value"
			    android:id="@+id/X1"
			    />
			</LinearLayout>
	
	   		
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/Y1"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    >
			    <TextView  
			    android:layout_width="55dp" 
			    android:layout_height="wrap_content" 
			    android:text="@string/init_value"
			    android:id="@+id/Y1"
			    />
			</LinearLayout>
	
	   		
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/d1"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    >

			    <TextView
			        android:id="@+id/d1"
			        android:layout_width="55dp"
			        android:layout_height="wrap_content"
			        android:text="@string/init_value" />

			</LinearLayout>
	
	   		
		    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/sub_title"
		    >
			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/orient1"
			    android:paddingRight="1sp"
			    />
	    	</LinearLayout>
	    	
	   		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    >

			    <TextView
			        android:id="@+id/orient1"
			        android:layout_width="55dp"
			        android:layout_height="wrap_content"
			        android:text="@string/init_value" />

			</LinearLayout>
	    </LinearLayout>    


	    <!-- Creation of general status -->    
	    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background='@color/title_bar'
	    >
			<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/status_header"
		    android:id="@+id/text_view"
		    />
	    </LinearLayout>
	    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtGeneralStatus"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.41"
            android:gravity="center_vertical|center_horizontal"
            android:text = "@string/robotDockingSearch"
            android:textColor = "@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>	    
	
    	   	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		
	 <Button
			            android:id="@+id/btnRestart"
			            android:layout_width="0dp"
			            android:layout_height="35dp"
			            android:layout_weight="0.41"
			            android:onClick="restartSequence"
			            android:text="@string/restart" />
			        
		</LinearLayout> 
	    
   	    <!-- Creation of http status -->    
	    
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background='@color/title_bar'
	    >
			<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/http_header"
		    android:id="@+id/text_view"
		    />
	    </LinearLayout>
	    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtHttpStatus"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.41"
            android:gravity="center_vertical|center_horizontal"
            android:text = "@string/emptyString"
            android:textColor = "@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>	  
   
 
    
    			<!-- Logo and site -->
			    
			    <LinearLayout
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="center_horizontal|bottom"
			    >
			        
				    <ImageView
				        android:layout_width="100dp"
				        android:layout_height="wrap_content"
				        android:adjustViewBounds="true"
				        android:contentDescription="wheelphone"
				        android:maxWidth="200dp"
				        android:src="@drawable/ic_launcher" />
			
				    <TextView  
				    android:layout_width="150dp" 
				    android:layout_height="wrap_content" 
				    android:text="@string/weblink"
				    android:gravity="center"
				    />
			    </LinearLayout>
    
	</LinearLayout>
	
	  
	<LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/tab2"
    android:orientation="vertical"
    android:paddingTop="60px"
     >
	    <com.wheelphone.targetDocking.QCARSampleGLView
	        android:id="@+id/glView"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:adjustViewBounds="true" />
	    				    
	    <!-- 
        <com.wheelphone.blobDocking.ColorBlobDetectionView
        android:id="@+id/blobdetect"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/> 	    
              
              
            
       			    <TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/init_value"
			    android:id="@+id/leftSpeedTxt"
			    /> 
			     
        -->
     </LinearLayout>


     </FrameLayout>
    
    </TabHost>	

	
